# calculator-cli

./: CMakeLists.txt  Parser.cpp  Parser.h  Stack.cpp  Stack.h  Trie.h  calculator-cli.sln  calculator-cli.vcxproj  calculator-cli.vcxproj.filters  test.cpp
Unit Test/: Unit Test.vcxproj  Unit Test.vcxproj.filters  pch.h  unit_test.cpp
include/: Trie.h
test/: pch.h
